css da sessão de produto

--- a/index.html
+++ b/index.html
@@ -28,17 +28,16 @@
 
     <div class="flex-container">
       <input type="text" placeholder="Procurar"/>
-        <div>
-          <img src="./img/imagem-carrinho.png" alt="ícone do carrinho">
-        </div>
-      </div>
+      <div class="cart">
+          <img src="./img/imagem-carrinho.svg" alt="ícone do carrinho">
+       </div>
     </div>
 
   </header>
 
   <main>
 
-    <section>
+    <section class="container flex-container hero-section">
       <div>
         <h2>SNEAK. <br/> Ultra Light</h2>
         <p>Os tênis SNEAK foram criados especificamente para treinos de circuito, seja para aulas fitness em casa ou para sua própria rotina de treinos.</p>
@@ -49,9 +48,9 @@
       </div>
     </section>
 
-    <aside>
+    <aside class="container flex-container-column-center product">
       <h2>corrida - masculino</h2><!--Em maúsculo-->
-      <ul>
+      <ul class="flex-container">
         <li class="cores-item branco"></li>
         <li class="cores-item dourado"></li>
         <li class="cores-item cinza"></li>
@@ -62,7 +61,7 @@
       <button>Adicionar ao carrinho</button>
     </aside>
 
-    <section>
+    <section class="container flex-container">
       <div>
         <h2>Leveza e agilidade</h2>
         <p>A construção ligeira de espuma e malha do SNEAK proporcionam conforto e agilidade durante o exercício. Um “burpe e break” na parte frontal do pé torna-o extremamente flexível para fazer prancha ou Mountain Climber.</p>
@@ -72,17 +71,17 @@
       </div>
     </section>
 
-    <section>
-      <div>
-        <img src="./img/amortecimento-imediato.png" alt="Amortecimento Imediato" />
-      </div>
+    <section class="container flex-container flex-reverse">
       <div>
         <h2>Amortecimento imediato</h2>
         <p>A espuma grossa sob o pé absorve o impacto e retorna a energia ao correr com os joelhos altos e ao saltar. O suporte de arco da parte média do pé garante conforto durante todo o treino.</p>
       </div>
+      <div>
+        <img src="./img/amortecimento-imediato.png" alt="Amortecimento Imediato" />
+      </div>
     </section>
 
-    <section>
+    <section class="container flex-container">
       <div>
         <h2>Sensação de estabilização</h2>
         <p>O outrigger - a proteção lateral - dá estabilidade ao pé ao fazer movimentos laterais, como por exemplo, o Skater Squat. </p>
@@ -92,14 +91,14 @@
       </div>
     </section>
 
-    <aside>
+    <aside class="container">
         <span>
           <img src="./img/arrow.png" /> 
         </span>
         <p>CORRA <br/> COMO SE O MUNDO <br/> DEPENDESSE DE VOCÊ</p>
     </aside>
 
-    <section>
+    <section class="container">
       <div>
         <img src="./img/map.png" alt="Nosso Endereço">
       </div>
@@ -120,7 +119,7 @@
 
   </main>
 
-  <footer>
+  <footer class="container">
     <h3>SNEAK.</h3>
     <div>
       <ul>
