--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       </div>
     </section>
 
-    <aside class="container flex-container-column-center product">
-      <h2>corrida - masculino</h2><!--Em maúsculo-->
+    <aside class="container flex-container-column-center product section-margin-200">
+      <h3>corrida - masculino</h3>
       <ul class="flex-container">
         <li class="cores-item branco"></li>
         <li class="cores-item dourado"></li>
@@ -61,8 +61,8 @@
       <button>Adicionar ao carrinho</button>
     </aside>
 
-    <section class="container flex-container">
-      <div>
+    <section class="quality container flex-container section-margin-160">
+      <div class="text-content">
         <h2>Leveza e agilidade</h2>
         <p>A construção ligeira de espuma e malha do SNEAK proporcionam conforto e agilidade durante o exercício. Um “burpe e break” na parte frontal do pé torna-o extremamente flexível para fazer prancha ou Mountain Climber.</p>
       </div>
@@ -71,8 +71,8 @@
       </div>
     </section>
 
-    <section class="container flex-container flex-reverse">
-      <div>
+    <section class="quality container flex-container flex-reverse section-margin-160">
+      <div class="text-content">
         <h2>Amortecimento imediato</h2>
         <p>A espuma grossa sob o pé absorve o impacto e retorna a energia ao correr com os joelhos altos e ao saltar. O suporte de arco da parte média do pé garante conforto durante todo o treino.</p>
       </div>
@@ -81,8 +81,8 @@
       </div>
     </section>
 
-    <section class="container flex-container">
-      <div>
+    <section class="quality container flex-container section-margin-200">
+      <div class="text-content">
         <h2>Sensação de estabilização</h2>
         <p>O outrigger - a proteção lateral - dá estabilidade ao pé ao fazer movimentos laterais, como por exemplo, o Skater Squat. </p>
       </div>
@@ -91,11 +91,12 @@
       </div>
     </section>
 
-    <aside class="container">
+    <aside class="container banner section-margin-200">
         <span>
-          <img src="./img/arrow.png" /> 
+          <img src="./img/arrow.png" />
+          <p>corra</p>
         </span>
-        <p>CORRA <br/> COMO SE O MUNDO <br/> DEPENDESSE DE VOCÊ</p>
+        <p>como se o mundo <br/> dependesse de você</p>
     </aside>
 
     <section class="container">
